--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,14 +26,15 @@ services:
       - "jupyterhub-data:/data"
     ports:
       - "9999:8000"
-      - "8889:8889"
+      - "8888:8888"
     environment:
       # This username will be a JupyterHub admin
       JUPYTERHUB_ADMIN: admin
       # All containers will join this network
       DOCKER_NETWORK_NAME: jupyterhub-network
       # JupyterHub will spawn this Notebook image for users
-      DOCKER_NOTEBOOK_IMAGE: jupyter/minimal-notebook:latest
+      #DOCKER_NOTEBOOK_IMAGE: jupyter/minimal-notebook:latest
+      DOCKER_NOTEBOOK_IMAGE: matercomus/jupyterlab1:latest
       # Notebook directory inside user image
       DOCKER_NOTEBOOK_DIR: /home/jovyan/work
       # Using this run command
